<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="5dp"
    android:backgroundTint="@color/blue_1"
    android:background="@drawable/rounded_corner"
    android:paddingHorizontal="12dp"
    android:paddingVertical="5dp">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:fontFamily="@font/montserrat_medium"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="2dp"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/desc"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:fontFamily="@font/montserrat_light"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:gravity="right"/>

</LinearLayout>