<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NoteDetailAct">
    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/input_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/montserrat_bold"
                android:hint="@string/title"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/input_text"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_marginVertical="15dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="top"
                android:hint="@string/typing"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </LinearLayout>

    </ScrollView>
    <include layout="@layout/bottom_bar_del"/>


</LinearLayout>