<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/blue_1"
    tools:context=".SignUpAct">

    <FrameLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_signup_bg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:background="@drawable/login_signup_header"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:gravity="center"
                android:fontFamily="@font/poppins_regular"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginVertical="10dp"
                android:text="@string/email_1"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_regular"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingVertical="5dp"
                android:drawableLeft="@drawable/ic_baseline_person_outline_24"
                android:drawablePadding="5dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/input_text"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/email_2"
                android:textColorHint="@color/hint"
                android:textSize="13sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginVertical="10dp"
                android:text="@string/password"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_regular"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/pw_input"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawableRight="@drawable/ic_baseline_visibility_off_24"
                android:drawablePadding="5dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/input_text"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/password"
                android:textColorHint="@color/hint"
                android:textSize="13sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginVertical="10dp"
                android:text="@string/c_password"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_regular"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/c_pw_input"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawableRight="@drawable/ic_baseline_visibility_off_24"
                android:drawablePadding="5dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/input_text"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/password"
                android:textColorHint="@color/hint"
                android:textSize="13sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginVertical="10dp"
                    android:text="@string/allreaddy_account_1"
                    android:textColor="@color/txt_tab"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="13sp"/>
                <TextView
                    android:id="@+id/login_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/allreaddy_account_2"
                    android:textColor="@color/blue_2"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="13sp"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">
                <Button
                    android:id="@+id/sign_up_btn"
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/button_1"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textSize="13sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_regular"
                    android:textStyle="bold"/>
            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>